escape values by default. use minus sign to mean print raw data

--- a/lib/view/templates/list.ejs
+++ b/lib/view/templates/list.ejs
@@ -1,4 +1,4 @@
-<<%=tag%><%=attrs()%>>
+<<%-tag%><%-attrs()%>>
 <% if (isEmpty()) { %>
 	<li><%=empty%></li>
 <% } else { %>
@@ -6,4 +6,4 @@
 	<li><%=item%></li>
 	<% }); %>
 <% } %>
-</<%=tag%>>
+</<%-tag%>>
