improved on Views
* fixing binding to content (hello world example works now)
* templates now have access directly to the view: with (view) { template }

--- a/lib/shipyard/view/templates/container.ejs
+++ b/lib/shipyard/view/templates/container.ejs
@@ -1,1 +1,4 @@
-<<%-tag%><%-attrs()%>><%?data%><%-children()%></<%-tag%>>
+<<%-get('tag')%><%-attrs()%>>
+    <%=get('content')%>
+    <%-children()%>
+</<%-get('tag')%>>
